Create the independent test package for corekit
Summary:
This diff create the test directory in corekit so that we can gradually move unit tests from `facebook` package back to `facebook-core`. One test is moved there to verify the correctness of the configuration.

Also updated github CI configuration so that github action will run all tests.

Reviewed By: jingping2015

Differential Revision: D29341762

fbshipit-source-id: 0dfb8cb3021a4e5c9d7b1dd005328a5463ac7451