@@ -29,17 +29,37 @@ project.ext.description = 'Facebook Core Android SDK'
 project.ext.url = 'https://github.com/facebook/facebook-android-sdk'
 
 dependencies {
+    def kotlin_ver = '1.3.31'
+
     // Support Dependencies
     implementation "androidx.annotation:annotation:${project.ext.androidxVersion}"
     implementation "androidx.legacy:legacy-support-core-utils:${project.ext.androidxLegacyVersion}"
 
     //https://developer.android.com/google/play/installreferrer/library.html#java
     implementation 'com.android.installreferrer:installreferrer:1.0' //there are issues with 1.1 regarding permissions, asks for unnecessary permissions
-
-    // Unit Tests
-    testImplementation "junit:junit:$junitVersion"
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Unit Tests
+    testImplementation project(":facebook-testutil")
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'androidx.test:core:1.0.0'
+
+    testImplementation "org.mockito:mockito-inline:2.26.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+    def powerMockVersion = '2.0.2'
+    testImplementation "org.powermock:powermock-core:$powerMockVersion"
+    testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4-rule:$powerMockVersion"
+    testImplementation "org.powermock:powermock-classloading-xstream:$powerMockVersion"
+    testImplementation 'org.assertj:assertj-core:3.15.0'
+
+    testImplementation "com.android.installreferrer:installreferrer:1.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_ver"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_ver"
 }
 
 android {
@@ -65,6 +85,17 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    sourceSets {
+        test.java.srcDirs += 'src/test/kotlin'
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=1024m'
+            maxHeapSize = "1024m"
+        }
     }
 }
 
